--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background-image: url('../../bb.jpeg');
+  background-image: url('../../nnn.jpeg');
   background-size: cover;
 }
 
